# wechat-archiver

./: .gitignore  AGENTS.md  Cargo.toml  README.md  ROADMAP.md  wechat-media-archive-plan.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: tasks_init_db_cli.rs
crates/core/: Cargo.toml
crates/core/src/: archive.rs  audio.rs  config.rs  error.rs  hash.rs  image.rs  image_key.rs  index.rs  lib.rs  lookup.rs  manifest.rs  media.rs  message_db.rs  report.rs  scanner.rs  status.rs  task.rs  task_store.rs  types.rs  verify.rs  video.rs  views.rs  wechat.rs
docs/: message-db-decryption-boundary.md  task-persistence-and-recovery.md
